docs: comments explaining sources and inspirations

--- a/src/_Blockquote.scss
+++ b/src/_Blockquote.scss
@@ -1,4 +1,8 @@
 // Blockquote
+//
+// Inspired by Blockquote from Milligram
+// https://github.com/milligram/milligram/blob/main/src/_Blockquote.sass
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(blockquote) {
