--- a/src/_Divider.scss
+++ b/src/_Divider.scss
@@ -1,4 +1,9 @@
 // Divider
+//
+// The divider has a height of 1px and no borders
+// You can easily use a gradient as the background
+// and change the height
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(hr) {
