--- a/src/_Form.scss
+++ b/src/_Form.scss
@@ -1,4 +1,8 @@
 // Form
+//
+// Inspired by Miligram Form components
+// https://github.com/milligram/milligram/blob/main/src/_Form.sass
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 input[type="date"],
