--- a/src/_Image.scss
+++ b/src/_Image.scss
@@ -1,4 +1,7 @@
 // Image
+//
+// Inspired by Normalize and Sanitize
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(img, picture) {
