--- a/src/_Link.scss
+++ b/src/_Link.scss
@@ -1,4 +1,8 @@
 // Link
+//
+// Only show the link underline when hovering
+// Include a focus state similar to buttons
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(a) {
