--- a/src/_Table.scss
+++ b/src/_Table.scss
@@ -1,4 +1,8 @@
 // Table
+//
+// Simplier version of Miligram Table code
+// https://github.com/milligram/milligram/blob/main/src/_Table.sass
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(table) {
