--- a/src/_Base.scss
+++ b/src/_Base.scss
@@ -1,20 +1,26 @@
 // Base
+//
+// 1 - Defensive CSS. This is a common source of problems
+//
+// 2 - Based on Modern Font Stacks
+// https://modernfontstacks.com/
+//
+// 3 - Prevent adjustments of font size after orientation changes in iOS.
+// From normalize.css
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
-
-// Set box-sizing globally to handle padding and border widths
 *,
 *:after,
 *:before {
-  box-sizing: inherit;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  background-repeat: no-repeat; // 1
 }
 
-// Default body styles
 :where(body) {
-  box-sizing: border-box;
   color: $color-fg;
-  font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", Arial, sans-serif;
+  font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", Arial, sans-serif; // 2
   line-height: 1.6;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; // 3
 }
