--- a/src/_Code.scss
+++ b/src/_Code.scss
@@ -1,4 +1,6 @@
 // Code
+// Same code as the code component from Miligram
+// https://github.com/milligram/milligram/blob/main/src/_Code.sass
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(code) {
