--- a/src/_ReduceMotions.scss
+++ b/src/_ReduceMotions.scss
@@ -1,3 +1,10 @@
+// List
+//
+// Inspired by Andy Bell Modern CSS Reset
+// https://andy-bell.co.uk/a-modern-css-reset/
+//
+// ––––––––––––––––––––––––––––––––––––––––––––––––––
+
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
