fix: variables for container and flow

--- a/src/Utilities/_Container.scss
+++ b/src/Utilities/_Container.scss
@@ -8,6 +8,6 @@ $container-max: var(--container-max, 60ch) !default;
 $container-padding: var(--container-padding, 3rem) !default;
 
 .container {
-  width: min(100% - $container-padding, var($container-max, 60ch));
+  width: min(100% - $container-padding, $container-max);
   margin-inline: auto;
 }
