styles: standardize comments

--- a/src/_Button.scss
+++ b/src/_Button.scss
@@ -5,6 +5,7 @@
 //
 // We replace the default focus states with our own
 // which uses 'focus-within' and an outline using the primary color
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 button,
