--- a/src/_Code.scss
+++ b/src/_Code.scss
@@ -1,6 +1,8 @@
 // Code
+//
 // Same code as the code component from Miligram
 // https://github.com/milligram/milligram/blob/main/src/_Code.sass
+//
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 :where(code) {
