--- a/src/Utilities/_Button.scss
+++ b/src/Utilities/_Button.scss
@@ -1,7 +1,12 @@
+// Button utility
+// ––––––––––––––––––––––––––––––––––––––––––––––––––
+
+$button-color: var(--button-color, var(--color-primary, #9b4dca)) !default;
+
 .button {
   display: inline-block;
-  border: 1px solid $color-primary;
-  color: $color-fg;
+  border: 1px solid $button-color;
+  color: inherit;
   text-decoration: none;
   padding: 0.6em 0.8em;
   border-radius: 0.2em;
@@ -12,7 +17,7 @@
   }
 
   &:focus-visible {
-    outline: 1px solid $color-primary;
+    outline: 1px solid $button-color;
     outline-offset: 1px;
   }
 
