--- a/src/_Base.scss
+++ b/src/_Base.scss
@@ -1,13 +1,15 @@
 // Base
 //
-// 1 - Defensive CSS. This is a common source of problems
+// 1. Defensive CSS. This is a common source of problems
 //
-// 2 - Based on Modern Font Stacks
+// 2. Based on Modern Font Stacks
 // https://modernfontstacks.com/
 //
-// 3 - Prevent adjustments of font size after orientation changes in iOS.
+// 3. Prevent adjustments of font size after orientation changes in iOS.
 // From normalize.css
 //
+// 4. Remove subpixel antialising on MacOS browsers
+// https://www.joshwcomeau.com/css/custom-css-reset/#four-font-smoothing-5
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 *,
 *:after,
@@ -22,4 +24,5 @@
   font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", Arial, sans-serif; // 2
   line-height: 1.6;
   -webkit-text-size-adjust: 100%; // 3
+  -webkit-font-smoothing: antialiased; // 4
 }
