fix: using decilitre blue in button utility

--- a/src/Utilities/_Button.scss
+++ b/src/Utilities/_Button.scss
@@ -1,7 +1,7 @@
 // Button utility
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-$button-color: var(--button-color, var(--color-primary, #9b4dca)) !default;
+$button-color: var(--button-color, var(--color-primary, #4871c6)) !default;
 
 .button {
   display: inline-block;
