fix(docs): link to utilities stylesheet

--- a/docs/src/_includes/layout.njk
+++ b/docs/src/_includes/layout.njk
@@ -12,7 +12,7 @@
       {% include "prism.css" %}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/decilitre@{{ version }}/dist/decilitre.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/decilitre@{{ version }}/dist/utilities.min.css" rel="stylesheet" />}
+    <link href="https://cdn.jsdelivr.net/npm/decilitre@{{ version }}/dist/utilities.min.css" rel="stylesheet" />
 
   </head>
 {{ content | safe }}
